header padding to fix anchors overlapping header

--- a/gatsby/static/css/webflow-overrides.css
+++ b/gatsby/static/css/webflow-overrides.css
@@ -33,6 +33,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
+h2, h3 {
+  padding-top: 100px;
+}
+
 .mximagine {
   font-size: 18px;
   font-weight: normal;
